WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131648
Sometimes-crash under handleSwipeGesture after closing a window or quitting
https://bugs.webkit.org/show_bug.cgi?id=131648
Summary
Sometimes-crash under handleSwipeGesture after closing a window or quitting
Tim Horton
Reported
2014-04-14 17:01:25 PDT
The swipe-tracking callback has no way to know that the ViewGestureController that spawned it is still alive. We should provide it such a mechanism. <
rdar://problem/15966106
>
Attachments
patch
(4.93 KB, patch)
2014-04-14 17:05 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-04-14 17:05:19 PDT
Created
attachment 229324
[details]
patch I'm not totally sure this is the right approach, but I'm not sure what the idiomatic way to resolve this is.
Tim Horton
Comment 2
2014-04-14 17:42:10 PDT
http://trac.webkit.org/changeset/167284
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug